2008-07-26  Keishi Hattori  <casey.hattori@gmail.com>

        Reviewed by Adam Roben.

        Fixed bug 18540: console.log('multiple', 'strings') quotes all strings after the first
        <https://bugs.webkit.org/show_bug.cgi?id=18540>

        * page/inspector/Console.js:
        (WebInspector.ConsoleMessage.prototype._format): String arguments are appended without formatting.

2008-07-26  Anthony Ricaud  <rik24d@gmail.com>

        Reviewed by Tim Hatcher.

        <https://bugs.webkit.org/show_bug.cgi?id=17589> Line highlighting should last longer

        Restore the fade out effect after highlighting.

        * page/inspector/SourceFrame.js: Add a class for fade-out effects and sets it at the end of highlighting time.

2008-07-26  Michelangelo De Simone  <michelangelo@me.com>

        Reviewed by Adele Petersen.

        Added the simple willValidate attribute to form controls according to
        WebForms 2 spec.

        URL: http://www.w3.org/TR/web-forms-2/#willvalidate

        Tests: fast/forms/willvalidate-000.html
               fast/forms/willvalidate-001.html
               fast/forms/willvalidate-002.html
               fast/forms/willvalidate-003.html
               fast/forms/willvalidate-004.html
               fast/forms/willvalidate-005.html
               fast/forms/willvalidate-006.html
               fast/forms/willvalidate-007.html
               fast/forms/willvalidate-008.html
               fast/forms/willvalidate-009.html

        * html/HTMLButtonElement.h: Added willValidate(), always false.
        * html/HTMLButtonElement.idl: willValidate attribute exposed.
        * html/HTMLFieldSetElement.h: Added willValidate(), always false.
        * html/HTMLFieldSetElement.idl: willValidate attribute exposed.
        * html/HTMLFormControlElement.cpp: (WebCore::HTMLFormControlElement::willValidate):
        Added base willValidate() implementation.
        * html/HTMLFormControlElement.h: Added willValidate().